# flake.template.ocaml

./: dune-project  flake.nix
test/: dune
